@@ -431,6 +431,7 @@ int ll_file_open(struct inode *inode, struct file *file)
                 it = &oit;
         }
 
+restart:
         /* Let's see if we have file open on MDS already. */
         if (it->it_flags & FMODE_WRITE) {
                 och_p = &lli->lli_mds_write_och;
@@ -467,17 +468,17 @@ int ll_file_open(struct inode *inode, struct file *file)
                 LASSERTF(rc == 0, "rc = %d\n", rc);
         } else {
                 LASSERT(*och_usecount == 0);
-                OBD_ALLOC(*och_p, sizeof (struct obd_client_handle));
-                if (!*och_p) {
-                        ll_file_data_put(fd);
-                        GOTO(out_och_free, rc = -ENOMEM);
-                }
-                (*och_usecount)++;
                 if (!it->d.lustre.it_disposition) {
+                        /* We cannot just request lock handle now, new ELC code
+                           means that one of other OPEN locks for this file
+                           could be cancelled, and since blocking ast handler
+                           would attempt to grab och_sem as well, that would
+                           result in a deadlock */
+                        up(&lli->lli_och_sem);
                         rc = ll_intent_file_open(file, NULL, 0, it);
                         if (rc) {
                                 ll_file_data_put(fd);
-                                GOTO(out_och_free, rc);
+                                GOTO(out_openerr, rc);
                         }
 
                         /* Got some error? Release the request */
@@ -487,8 +488,16 @@ int ll_file_open(struct inode *inode, struct file *file)
                         }
                         mdc_set_lock_data(&it->d.lustre.it_lock_handle,
                                           file->f_dentry->d_inode);
+                        goto restart;
                 }
-                req = it->d.lustre.it_data;
+ 
+                OBD_ALLOC(*och_p, sizeof (struct obd_client_handle));
+                if (!*och_p) {
+                        ll_file_data_put(fd);
+                        GOTO(out_och_free, rc = -ENOMEM);
+                }
+                (*och_usecount)++;
+               req = it->d.lustre.it_data;
 
                 /* mdc_intent_lock() didn't get a request ref if there was an
                  * open error, so don't do cleanup on the request here
@@ -537,6 +546,7 @@ out_och_free:
                         (*och_usecount)--;
                 }
                 up(&lli->lli_och_sem);
+out_openerr:
                 lli->lli_opendir_pid = 0;
         }
         return rc;
